--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
 
     <section class="features">
         <h2>Notice</h2>
-        <p>search for more music. Due to error music is not showing it will fix soon </p>
-<p>search for song it will show the song which you want</p>
+        <p>this is the trial of shorts music </p>
+<p>this websit is not fully released </p>
+        <p>releasing soon</p>
     </section>
 
     <section class="search-section">
