--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
         <h2>Notice</h2>
         <p>this is the trial of shorts music </p>
 <p>this websit is not fully released </p>
-        <p>releasing soon</p>
+        <p>releasing soon
+search for more music</p>
     </section>
 
     <section class="search-section">
